Fix navbar link alignment

--- a/packages/client/src/app/nav-bar/nav-bar.module.css
+++ b/packages/client/src/app/nav-bar/nav-bar.module.css
@@ -22,6 +22,7 @@
 
 .options-list {
   display: flex;
+  align-items: center;
 }
 
 .options-list > * {
